@@ -1,9 +1,9 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.2"
-  - "3.3"
+  - "3.5"
+  - "3.5"
+  - "3.7"
   - "pypy"
 install: "pip install . -r requirements.txt"
 script: python setup.py test
