@@ -15,8 +15,8 @@ find-links = 3rdparty
 unzip = true
 
 [versions]
-setuptools = 18.0.1
-zc.buildout = 2.3.1
+setuptools =
+zc.buildout =
 
 [py.test]
 recipe = zc.recipe.egg
