@@ -1,8 +1,9 @@
 [tox]
 envlist =
   py27,
-  py34,
-  py36
+  py35,
+  py36,
+  py37,
 
 [testenv]
 deps =
