@@ -4,7 +4,15 @@ CHANGES
 1.0.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+Backwards incompatible changes
+------------------------------
+
+- Drop support for Python 2.6, 3.2 and 3.3.
+
+Other changes
+-------------
+
+- Add support for Python 3.5, 3.6 and 3.7.
 
 
 1.0.0 (2018-01-16)
